@@ -593,9 +593,6 @@ void drumkv1_lv2::qapp_instantiate (void)
 	#else
 		::setenv("QT_NO_GLIB", "1", 1); // Avoid glib event-loop...
 	#endif
-	#if defined(Q_OS_LINUX) && !defined(CONFIG_WAYLAND)
-		::setenv("QT_QPA_PLATFORM", "xcb", 0);
-	#endif
 	#if QT_VERSION >= QT_VERSION_CHECK(5, 6, 0)
 	#if QT_VERSION <  QT_VERSION_CHECK(6, 0, 0)
 		QApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
