@@ -4,6 +4,11 @@ drumkv1 - an old-school drum-kit sampler
 ChangeLog
 
 
+GIT HEAD
+
+- Get rid of CONFIG_WAYLAND build config option.
+
+
 1.3.2  2025-05-20  A Mid-Spring'25 Release.
 
 - Unassigned element/sample keys are now shown grayed out on the
